horizontal scroll fixed, some links working

--- a/css/main-style.css
+++ b/css/main-style.css
@@ -7,12 +7,9 @@ body{
   font-family: 'Karla', sans-serif;
   letter-spacing: -.02em;
 }
-
 .container{
-  width: 100%;
-  padding:0;
+  width:100%;
 }
-
 /*---------------home page---------------------*/
 a{
   color:#42201A;
@@ -21,7 +18,7 @@ a{
 
 a:visited{
   text-decoration: none;
-  color:#8C563C; 
+  color:#42201A; 
   font-weight: bolder;
 }
 .introImage{ 
@@ -46,10 +43,12 @@ a:visited{
 .quote h1{
   font-size: 3.5em;
 }
-
-.quote p{
+.element{
+  line-height: 1.5em;
+}
+.element p{
   font-size: 1.5em;
-  padding-top: 1em;
+  padding-left: 600px;
 }
 
 #desk{
@@ -78,6 +77,7 @@ a:visited{
   border-bottom: 2px solid #42201A;
   padding: 30px;
   margin-bottom: 80px;
+  margin-top: 50px;
 }
 
 .aboutParagraph{
@@ -167,10 +167,10 @@ a:visited{
 
 #coffee-right-img{
   height:400px;
-  margin-left: 60px;
+  width: 1325px;
+  margin-left: 80px;
   -webkit-clip-path: polygon(100% 0, 0 30%, 100% 100%);
   clip-path: polygon(100% 0, 0 30%, 100% 100%);
-  float:right;
   position: absolute;
   display: inline-block;
   z-index: -1;
